# cloudy

./: .gitignore  CMakeLists.txt  CMakePresets.json  justfile  vcpkg.json
src/: cam.cpp  cam.hpp  coord.cpp  coord.hpp  img.cpp  img.hpp  lib.cpp  lib.hpp  main.cpp  scene.cpp  scene.hpp  sky.cpp  sky.hpp  vec.hpp
